--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Uncomment .env from .gitignore to prevent it from being committed to version control
 TOKEN=secret-starter-mern
-MONGODB_URI=<your_mongodb_uri mongodb+srv://username:password@your-cluster.mongodb.net/database>
+MONGODB_URI=mongodb+srv://anushkagaat_db_user:SNCUHRYHmGMiKK4V@mp3.lnpyd7l.mongodb.net/?appName=mp3
