--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Uncomment .env from .gitignore to prevent it from being committed to version control
 TOKEN=secret-starter-mern
-MONGODB_URI=mongodb+srv://anushkagaat_db_user:SNCUHRYHmGMiKK4V@mp3.lnpyd7l.mongodb.net/?appName=mp3
+MONGODB_URI=mongodb+srv://anushkagaat_db_user:SNCUHRYHmGMiKK4V@mp3.lnpyd7l.mongodb.net/mp3?appName=mp3
